error in style on iphone fixed

--- a/client/css/newgrid/modules/circles.styl
+++ b/client/css/newgrid/modules/circles.styl
@@ -23,10 +23,10 @@ _overlap-width = (circles-overlap * (circles-count - 1))
   overflow hidden
   > *
     font-size circles-fontsize
-    line-height circles-fontsize
+    line-height 0
     border-radius 50%
-    calculate padding-bottom, '' +  (100% / circles-count / 2) '' + ' - ' + (circles-fontsize / 2)
-    calculate padding-top, '' +  (100% / circles-count / 2) '' + ' - ' + (circles-fontsize / 2)
+    padding-bottom (100% / circles-count / 2)
+    padding-top (100% / circles-count / 2)
 
 .circles.circles-overlap
   for row in 1..circles-count
@@ -48,8 +48,8 @@ if responsive
   // switching to break in half
 	@media portable-media
     .circles > *
-      calculate padding-bottom, '' +  (100% / circles-count) '' + ' - ' + (circles-fontsize / 2)
-      calculate padding-top, '' +  (100% / circles-count) '' + ' - ' + (circles-fontsize / 2)
+      padding-bottom (100% / circles-count)
+      padding-top (100% / circles-count)
     .circles.circles-overlap
       > *
         margin-left (_overlap-width * -1)
@@ -124,6 +124,7 @@ if responsive
     border-radius 0
     padding-top 0
     padding-bottom 0
+    line-height circles-fontsize
     //Disable background
     &:after 
       content normal
